--- a/backend/disease_classifier/.env
+++ b/backend/disease_classifier/.env
@@ -1,1 +1,2 @@
-KINDWISE_API_KEY=OQDseiu6gH6caKEtq86jjr4BayB2tg6YFzfs8LwH03UEufNzHG
+KINDWISE_API_KEY="OQDseiu6gH6caKEtq86jjr4BayB2tg6YFzfs8LwH03UEufNzHG"
+GEMINI_API_KEY="AIzaSyB1SdVfSO100trZWhwwraEfIVnubjxk5tQ"
